--- a/index.html
+++ b/index.html
@@ -135,8 +135,11 @@
             <p>an app for your business</p>
           </div>
           <form id="loginForm">
-            <div data-netlify-identity-menu></div>
+            <input type="name" name="" value="" placeholder="Employee Name">
+            <input type="password" name="" value="" placeholder="password">
+            <button type="submit" name="button">login</button>
           </form>
+          <div data-netlify-identity-menu></div>
         </div>
       </div>
     </div>
