--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             <p>an app for your business</p>
           </div>
           <form id="loginForm">
-            <input type="name" name="" value="" placeholder="Employee Name">
-            <input type="password" name="" value="" placeholder="password">
+            <input type="username" name="username" value="" placeholder="Employee Name">
+            <input type="password" name="password" value="" placeholder="password">
             <button type="submit" name="button">login</button>
           </form>
           <div data-netlify-identity-menu></div>
