--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
           </div>
           <form id="loginForm">
             <input type="username" name="username" value="" placeholder="Employee Name">
-            <input type="password" name="password" value="" placeholder="password">
+            <div class="passDiv">
+              <input type="password" name="password" value="" placeholder="password" >
+              <ion-icon name="eye-off-outline"></ion-icon>
+            </div>
             <button type="submit" name="button">login</button>
           </form>
           <div data-netlify-identity-menu></div>
