--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
               <p>Clear All</p>
               <span></span>
             </li>
+            <li class="logout">
+              <ion-icon name="log-out-outline"></ion-icon>
+              <p>Logout</p>
+            </li>
           </ul>
           <div class="about active">
             <p>
