--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div class="sidebar">
           <span></span>
           <ul>
+            <li class="workers_li">
+              <ion-icon name="people-outline"></ion-icon>
+              <p>Workers</p>
+            </li>
             <li class="fiscal_li">
               <p>৳</p>
               <p>Fiscal Yr.</p>
@@ -90,7 +94,7 @@
           </div>
         </header>
         <div class="table_container">
-          <div class="table_wrapper">
+          <div id="employee_section" class="table_wrapper">
             <section id="employee">
               <div class="thead">
                 <table>
@@ -121,6 +125,42 @@
                       <td class="grp">Grp.</td>
                       <td>Total</td>
                       <td>Paid</td>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <div class="tbody">
+                <table>
+                  <tbody></tbody>
+                </table>
+              </div>
+            </section>
+            <section id="workers" >
+              <div class="thead">
+                <table>
+                  <thead>
+                    <tr>
+                      <td>Name</td>
+                      <td>salary</td>
+                      <td>Paid</td>
+                      <td>Deu</td>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <div class="tbody">
+                <table>
+                  <tbody></tbody>
+                </table>
+              </div>
+            </section>
+            <section id="workers_payments" >
+              <div class="thead">
+                <table>
+                  <thead>
+                    <tr>
+                      <td>Date</td>
+                      <td>Absences / Paid</td>
                     </tr>
                   </thead>
                 </table>
@@ -198,7 +238,35 @@
           min="0"
           required
         />
-        <button id="from_item_btn" type="submit" name="button">
+        <button type="submit" name="button">
+          <ion-icon name="add-outline"></ion-icon>
+        </button>
+      </form>
+      <form id="form_worker" class="form hidden" autocomplete="off">
+        <input type="text" name="worker" value="" placeholder="Name" required>
+        <input type="date" name="join" required />
+        <input
+          type="number"
+          name="salary"
+          placeholder="Salary"
+          min="0"
+          required
+        />
+        <button type="submit" name="button">
+          <ion-icon name="add-outline"></ion-icon>
+        </button>
+      </form>
+      <form id="form_payment" class="form hidden" autocomplete="off">
+        <input type="date" class="start" name="date" required />
+        <input type="date" class="end" name="date" />
+        <input
+          type="number"
+          name="recieved"
+          placeholder="Payment (Put 0 to add absences)"
+          min="0"
+          required
+        />
+        <button type="submit" name="button">
           <ion-icon name="add-outline"></ion-icon>
         </button>
       </form>
