--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div class="container">
       <div class="innerContainer">
+        <span class="sidebar_span"></span>
         <div class="sidebar">
-          <span></span>
           <ul>
             <li class="workers_li">
               <ion-icon name="people-outline"></ion-icon>
