--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                   <thead>
                     <tr>
                       <td>Name</td>
+                      <td>Last Pay</td>
                       <td>Product</td>
                       <td>Paid</td>
                       <td>Deu</td>
