--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Workers</p>
               </li>
               <li class="bill_li">
-                <p>Bill</p>
+                <p>Bills</p>
               </li>
               <li class="production_li">
                 <p>Production</p>
