--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
               <li class="bill_li">
                 <p>Bills</p>
               </li>
+              <li class="cost_li">
+                <p>Costs</p>
+              </li>
               <li class="production_li">
                 <p>Production</p>
               </li>
@@ -247,6 +250,45 @@
                 </table>
               </div>
             </section>
+            <section id="cost">
+              <div class="thead">
+                <table>
+                  <thead>
+                    <tr>
+                      <td>No.</td>
+                      <td>Delivery</td>
+                      <td>Dress</td>
+                      <td>Lot size</td>
+                      <td>Cost</td>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <div class="tbody">
+                <table>
+                  <tbody></tbody>
+                </table>
+              </div>
+            </section>
+            <section id="cost_detail">
+              <div class="thead">
+                <table>
+                  <thead>
+                    <tr>
+                      <td>Material</td>
+                      <td>Qnt</td>
+                      <td>Price</td>
+                      <td>Total</td>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <div class="tbody">
+                <table>
+                  <tbody></tbody>
+                </table>
+              </div>
+            </section>
             <section id="payments">
               <div class="left">
                 <div class="thead">
@@ -387,7 +429,7 @@
       </form>
       <form id="form_bill" class="form hidden" autocomplete="off">
         <input type="date" name="date" required />
-        <input id="uploadImg" type="file" name="Add image" accept=".jpg, .png" value="">
+        <input type="file" name="Add image" accept=".jpg, .png" value="">
         <button type="button" class="uploadImg" name="button">
           <ion-icon name="image-outline"></ion-icon>
         </button>
@@ -408,6 +450,27 @@
         <input type="text" name="for" value="Cash" placeholder="For" required>
         <input type="number" name="fabric" placeholder="Fabric" min="0" required />
         <input type="number" name="wage" placeholder="Wage" min="0" required />
+        <button type="submit" name="button">
+          <ion-icon name="add-outline"></ion-icon>
+        </button>
+      </form>
+      <form id="form_cost" class="form hidden" autocomplete="off">
+        <input type="number" name="lotNo" placeholder="Lot No." required />
+        <input type="date" name="date" required />
+        <input type="file" name="Add image" accept=".jpg, .png" value="">
+        <button type="button" class="uploadImg" name="button">
+          <ion-icon name="image-outline"></ion-icon>
+        </button>
+        <input type="text" class="dress" name="dress_name" placeholder="Dress name" required />
+        <input type="number" name="lotSize" placeholder="Lot size" min="0" required />
+        <input type="text" name="delivery" placeholder="Delivery" required />
+        <div class="itemsToAdd">
+          <div class="itemToAdd">
+            <input type="text" name="material" maxlength="25" placeholder="Material" required/>
+            <input type="number" name="qnt" placeholder="Qnt" step="0.01" min="0" required />
+            <input type="number" name="cost" placeholder="Price" step="0.01" min="0" required />
+          </div>
+        </div>
         <button type="submit" name="button">
           <ion-icon name="add-outline"></ion-icon>
         </button>
