--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
               <li class="wages_li">
                 <p>Wages</p>
               </li>
+              <li class="summery_li">
+                <p>Summery</p>
+              </li>
             </ul>
             <li class="fiscal_li">
               <p>৳</p>
@@ -126,6 +129,11 @@
             <option value="10">Oct</option>
             <option value="11">Nov</option>
             <option value="12">Des</option>
+          </select>
+          <select class="year_filter" name="" >
+            <option value="2019">2019</option>
+            <option value="2020">2020</option>
+            <option value="2021">2021</option>
           </select>
         </header>
         <div class="table_container">
@@ -326,6 +334,27 @@
                     <tbody></tbody>
                   </table>
                 </div>
+              </div>
+            </section>
+            <section id="summery">
+              <div class="thead">
+                <table>
+                  <thead>
+                    <tr>
+                      <td>Mon</td>
+                      <td>Production</td>
+                      <td>Wage</td>
+                      <td>৳ Product</td>
+                      <td>৳ Wage</td>
+                      <td>Current</td>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <div class="tbody">
+                <table>
+                  <tbody></tbody>
+                </table>
               </div>
             </section>
           </div>
