--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         </button>
         <input type="text" class="dress" name="dress_name" placeholder="Dress name" required />
         <input type="number" name="lotSize" placeholder="Lot size" min="0" required />
-        <input type="text" name="delivery" placeholder="Delivery" required />
+        <input type="text" name="delivery" placeholder="Delivery" />
         <div class="itemsToAdd">
           <div class="itemToAdd">
             <input type="text" name="material" maxlength="25" placeholder="Material" required/>
