filter and other fixes

--- a/index.html
+++ b/index.html
@@ -304,10 +304,8 @@
                   <table>
                     <thead>
                       <tr>
-                        <td>Ref.</td>
-                        <td>Date</td>
-                        <td>Qnt.</td>
-                        <td>total</td>
+                        <td class="date" data-content="Ref.">Date</td>
+                        <td class="total" data-content="Qnt.">total</td>
                       </tr>
                     </thead>
                   </table>
@@ -324,8 +322,7 @@
                     <thead>
                       <tr>
                         <td>Date</td>
-                        <td>For</td>
-                        <td>Taka</td>
+                        <td class="total" data-content="For">Taka</td>
                       </tr>
                     </thead>
                   </table>
