--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <input type="date" name="date" required />
         <input type="text" name="for" value="Cash" placeholder="For" required>
         <input type="number" name="fabric" placeholder="Fabric" min="0" required />
-        <input type="number" name="wage" placeholder="Wage" min="0" required />
+        <input type="number" name="wage" placeholder="Wage" step="0.0000001" min="0" required />
         <button type="submit" name="button">
           <ion-icon name="add-outline"></ion-icon>
         </button>
