--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="after"></div>
             </div>
           </div>
-          <select class="month_filter" name="">
+          <select class="month_filter">
             <option value="all">All</option>
             <option value="custom">Custom</option>
             <option value="01">Jan</option>
