--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <select class="month_filter">
             <option value="all">All</option>
             <option value="custom">Custom</option>
-            <option value="01">Jan</option>
+            <!-- <option value="01">Jan</option>
             <option value="02">Feb</option>
             <option value="03">Mar</option>
             <option value="04">Apr</option>
@@ -129,7 +129,7 @@
             <option value="09">Sep</option>
             <option value="10">Oct</option>
             <option value="11">Nov</option>
-            <option value="12">Des</option>
+            <option value="12">Des</option> -->
           </select>
           <select class="year_filter" name="" >
             <option value="2019">2019</option>
