--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                       <td>Name</td>
                       <td>Last Pay</td>
                       <td>Product</td>
-                      <td>Paid</td>
-                      <td>Deu</td>
+                      <td>Payment</td>
+                      <!-- <td>Deu</td> -->
                     </tr>
                   </thead>
                 </table>
